Get v8_context_snapshot_generator to exit(1) instead of crash

Handling failures by crashing turns out to work poorly on Windows
because it is confusing (it looks like a bug rather than a build
failure) and because the process return code ends up being zero, so
ninja doesn't realize anything is wrong. This change fixes these
problems by detecting write failures and returning an error code.

This particular CHECK is being fixed because it is easy to accidentally
hit it simply by building Chrome while it is still running.

The new error checking is also better in that it verifies that all

Bug: 866656
Change-Id: I4303afaa898c85c72bd9d337fe8e19e239f17513
Reviewed-on: https://chromium-review.googlesource.com/1152159
Commit-Queue: Bruce Dawson <brucedawson@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578770}
Former-commit-id: a6e726f7d8e52afd627f036eba4b1798d9dbe278